# crucible

./: .gitignore  CONFIG.md  Cargo.toml  Dockerfile  LICENSE  README.md  STATIC_PHP_README.md  config.example.yml  config.pterodactyl.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error_pages.rs  health.rs  load_balancer.rs  main.rs  php_fpm.rs  proxy.rs  proxy_update.rs  security.rs  ssl.rs  static_files.rs
