[package]
name = "crucible"
version = "0.1.0"
edition = "2021"
authors = ["Altare Technologies Limited"]
license = "Proprietary"
description = "High-performance HTTP/HTTPS reverse proxy with load balancing"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-service = "0.3"
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
once_cell = "1.19"
bytes = "1.5"
pin-project-lite = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
