[package]
name = "crucible"
version = "0.1.0"
edition = "2021"
authors = ["Altare Technologies Limited"]
license = "Proprietary"
description = "High-performance HTTP/HTTPS reverse proxy with load balancing"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-service = "0.3"
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
once_cell = "1.19"
bytes = "1.5"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ipnetwork = "0.20"
chrono = "0.4"
urlencoding = "2.1"
httpdate = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

